--- a/css/main.css
+++ b/css/main.css
@@ -87,62 +87,94 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+  /* General Styles */
+
    body {
-    
-    font-family: 'Cantarell', sans-serif;
+    font-family: 'Outfit', sans-serif;
     margin: 0;
     padding: 0;
     font-size: 16px;
     text-align: center;
   }
-  
-  header {
-    background-color: #006D77;
-    color: #fff;
-    padding: 20px;
-  }
-  
-  header h1 {
-    font-family: 'Fjalla One', sans-serif;
-    margin: 0;
-    font-size: 4em;
+
+  img {
+    width: 100%;
   }
 
-  nav {
-    background-color: #83C5BE;
-    text-align: center;
-    padding: 20px;
-  }
-  
-  nav ul {
-    list-style: none;
+  ul,
+  ol {
+    list-style-type: none;
     margin: 0;
     padding: 0;
   }
-  
-  nav li {
-    display: inline-block;
-    margin: 0 10px;
-  }
-  
-  nav a {
-    color: #fff;
+
+  a {
     text-decoration: none;
-    font-size: 20px;
-    font-weight: bold;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.2s ease;
+    color: #000;
   }
+
+  h1 {
+    font-size: 1em;
+    margin: 0;
+  }
+
+  .content-wrapper {
+    width: 100%;
+  }
+
+  /* -------------------- Base Header - Footer Styles -------------------- */
   
-  nav a:hover {
-    background-color: #148f77;
-  }  
-  
-  main {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+  header {
+    background-color: #FAFBFA;
+    color: #fff;
+  }
+
+  h1 p {
+    margin: 0;
+    background-color: #90b8ed;
+    color: #FAFBFA;
+    font-weight: 400;
+  }
+
+  h1 img {
+    max-width: 65%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+
+  .hamburger {
+    position: fixed;
+    z-index: 100;
+    bottom: 1em;
+    right: 40%;
+    left: 40%;
+    padding: 4px;
+    border: black solid 1px;
+    background: white;
+    cursor: pointer;
+  }
+
+  .closeIcon {
+    display: none;
+  }
+
+  .menu {
+    position: fixed;
+    transform: translateY(-100%);
+    transition: transform 0.2s;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+    background: #FAFBFA;
+    color: white;
+    list-style: none;
+    padding-top: 4rem;
+  }
+
+  .showMenu {
+    transform: translateY(0);
   }
   
   .book-selection {
@@ -232,7 +264,7 @@ textarea {
   }
   
   form button[type="submit"] {
-    background-color: #006D77;
+    background-color: #193FBD;
     color: #fff;
     border: none;
     padding: 10px;
@@ -261,6 +293,50 @@ textarea {
 /* ==========================================================================
    Helper classes
    ========================================================================== */
+
+   @media only screen and (max-width: 768px) {
+    .nav-menu {
+        position: fixed;
+        left: -100%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: #fff;
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
+    }
+
+    .nav-menu.active {
+        left: 0;
+    }
+
+    .nav-item {
+        margin: 2.5rem 0;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+      opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+  }
+
+}
+
+
 
 /*
  * Hide visually and from screen readers
